--- a/estilos/style.css
+++ b/estilos/style.css
@@ -139,6 +139,10 @@ main > img {
     width: 100%;
 }
 
+picture > img {
+    width: 100%;
+}
+
 div.video {
     background-color: var(--cor5);
     margin: 0px -20px 30px -20px;
@@ -154,6 +158,7 @@ div.video > iframe {
     width: 90%;
     height: 90%;
 }
+
 
 
 article > img.pequena {
